--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <head>    
         <meta charset = "utf-8">
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="common.css"/>
-        <link rel="stylesheet" href="main.css"/>
+        <link rel="stylesheet" href="css/common.css"/>
+        <link rel="stylesheet" href="css/main.css"/>
         <title>ExCo</title>
     </head>
     <body>
@@ -35,6 +35,104 @@
 Here you can take part in an amazing adventures - quests!There are a lot of them,you can choose any type of a quest you like,any time you want it to be held - just enjoy!It`s nice possibility to relax,spend time in quite active way and just relax.To find more about rules - view the         . And monitor our news - there you can find some useful info:)
  
 So, choose the quest you like right now!
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
+<p>g</p>
                     </div>
                 </div>
                 <div class="undertext">
