--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <header>
                     <ul class="menu">
                     	<li><a href="index.html">Main</a></li>
-                    	<li><a href="excursions.html">Quests</a>
-	                    <li><a href="excursions.html">Rules</a></li>
-    	                <li><a href="excursions.html">News</a>
-        	            <li><a href="about us.html">Reviews</a></li>
+                    	<li><a href="quests.html">Quests</a>
+	                    <li><a href="rules.html">Rules</a></li>
+    	                <li><a href="news.html">News</a>
+        	            <li><a href="reviews.html">Reviews</a></li>
                 	</ul>
                 	<div class="EXCO">
                         <img src="img/EXCO.jpg">
@@ -30,113 +30,19 @@
             <div class="body">
                 <div class="blocks">
                     <div class="text">
-                        Welcome to the Quests!
+                        <h2>Welcome to the Quests!</h2>
  
-Here you can take part in an amazing adventures - quests!There are a lot of them,you can choose any type of a quest you like,any time you want it to be held - just enjoy!It`s nice possibility to relax,spend time in quite active way and just relax.To find more about rules - view the         . And monitor our news - there you can find some useful info:)
- 
-So, choose the quest you like right now!
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-<p>g</p>
-                    </div>
-                </div>
+						Here you can take part in an amazing adventures - quests! There are a lot of them, you can choose any type of a quest you like, any time you want it to be held - just enjoy! It`s nice possibility to relax, spend time in quite active way and just relax. To find more about rules - view the <a href="rules.html">rules</a>. And monitor our news - there you can find some useful info:)
+ 						<p></p>
+						So, choose the quest you like right now!
+						<p></p>
+						<center>
+							<a href="quest.html"><input type='button' value='Choose!' class='button'/></a>
+						</center>
+					</div>
+				</div>
                 <div class="undertext">
-                    Contributors:       Ivan Shinkevich, Dmitry Lishko, Bozhena Mesiachik, Liana Khazaliya 
+                    © 2016 Ivan Shinkevich, Dmitry Lishko, Bozhena Mesiachik, Liana Khazaliya. All rights reserved.
                 </div>
             </div>
         </div>
