--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html> 
     <head>    
         <meta charset = "utf-8">
-        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="img/icon.png" type="image/png">
         <link rel="stylesheet" href="css/common.css"/>
         <link rel="stylesheet" href="css/main.css"/>
         <title>ExCo</title>
